# workaround

./: .bazelignore  .bazelrc  .cloudbuild.bazelrc.tpl  .dockerignore  .gcloudignore  .gitignore  .graphqlrc  .npmrc  .swcrc  BUILD.bazel  Dockerfile  Dockerfile.workspace  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  bzl.sh  next.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  schema.gql  setup_workspace.sh  to-do.md  use_context.sh  watch.sh
client/: BUILD.bazel  package.json
client/apps/web-client/: BUILD.bazel  Dockerfile  dev.sh  next.config.js  nodemon.json  package.json  tsconfig.json
client/apps/web-client/src/app/: layout.tsx  providers.tsx
client/apps/web-client/src/app/opa/: page.tsx
client/apps/web-client/src/app/project/: page.tsx
client/apps/web-client/src/features/: providers.tsx
client/apps/web-client/src/features/apollo/: apollo-client.ts
client/apps/web-client/src/features/auth/: auth.state.ts  auth.tsx
client/apps/web-client/src/features/config/: config.ts
client/apps/web-client/src/features/editor/: Editor.tsx  Timeline.tsx  VideoView.tsx
client/apps/web-client/src/features/header/: header-content.tsx  header.tsx
client/apps/web-client/src/features/project/: project-list.state.ts  project-list.tsx
client/apps/web-client/src/pages/: _app.tsx  _document.tsx  index.tsx
client/apps/web-client/src/pages/api/: test.ts
client/bazel/: babel.bzl
deploy/: BUILD.bazel  Dockerfile  Readm.md  cloudbuild.yaml
deploy/cloud-sdk/: BUILD.bazel  Dockerfile  build.sh  cloudbuild.yaml  run_build.sh
deploy/cluster/: BUILD.bazel
deploy/cluster/auth/: BUILD.bazel  k8s-auth-configmap.yaml  k8s-auth-db-migration-job.yaml  k8s-auth-db-secret.yaml  k8s-auth-deployment.yaml  k8s-auth-service.yaml
deploy/cluster/backend/: BUILD.bazel  get-lb-ip.tpl.sh  k8s-backend-data-source.configmap.yaml  k8s-backend-migration.job.yaml  k8s-backend-service.yaml  k8s-backend.configmap.yaml  k8s-backend.deployement.yaml  k8s-backend.secret.yaml  k8s-backend.service.yaml  k8s-backend.service.yaml.old
deploy/cluster/general/: .dockerconfigjson  BUILD.bazel  cloud_builder.cluster-role.yaml  gar.secret.yaml  k8s-ngnix-ingress.yaml
deploy/cluster/prompt/: BUILD.bazel  k8s-prompt-configmap.yaml  k8s-prompt-deployment.yaml  k8s-prompt-secrets.yaml
deploy/cluster/web-client/: BUILD.bazel  k8s-web-client.deployement.yaml  k8s-web-client.service.yaml
deploy/infra/: 01_main.tf  02_variables.tf  03_gcp_service_accounts.tf  03_service_accounts.tf  04_gcp_iam_bindigs.tf  04_iam_bindigs.tf  04_iam_bindings.tf  05_gcp_secrets.tf  05_secrets.tf  06_cluster.tf  06_gcp_artifacts.tf  07_gcp_services.tf  07_services.tf  08_artifacts.tf  08_gcp_storage_buckets.tf  09_aws_iam_test.tf  10_aws_subnets.tf  10_do_cluster.tf  11_aws_nat.tf  11_do_domain.tf  12_aws_routes.tf  13_aws_eks.tf  14_aws_nodes.tf  15_aws_iam_oidc.tf  16_aws_rds.tf  20_aws_rds.tf  21_aws_rds_redis.tf  22_aws_vpc.tf  24_aws_subnets.tf  25_aws_nat.tf  26_aws_routes.tf  27_aws_eks.tf  28_aws_nodes.tf  30_aws_rds.tf  30_k8s_load_balancer.tf  30_k8s_main.tf  31_aws_iam.tf  BUILD.bazel  cert_values.yaml  k8s-ingess-lb.yaml.tpl  (+1 more)
deploy/shell/: activate-access-key.sh  apply-k8s.sh  bzl.sh  configure-aws.sh  db-migrate.sh  release-npm-package.sh
sandbox/: BUILD.bazel  Readme.md
sandbox/cluster/: BUILD.bazel  activate-access-key.sh  get-kubeconfig.sh
sandbox/environment/: BUILD.bazel  docker-compose.development.yml  init-db.sh
sandbox/gcp/: BUILD.bazel  defs.bzl
sandbox/gcp/cloud-sql/: BUILD.bazel
sandbox/gcp/secrets/: BUILD.bazel
sandbox/gcp/shell/: connect-bastion.sh  drop-bastion-proxy.sh  proxy-bastion.sh
sandbox/gcp/terraform/: BUILD.bazel
server/apps/auth/: BUILD.bazel  datasource.ts  nodemon.json  package.json  update.sh
server/apps/auth/migrations/: 1692552492326-init.ts
server/apps/auth/src/: app.module.ts  main.ts
server/apps/auth/src/app/auth/: api-auth.decorator.ts  auth-decorator.ts  auth-guard.ts  index.ts
server/apps/auth/src/app/authz/: authz.const.ts  authz.module.ts  authz.service.ts
server/apps/auth/src/configuration/: config.const.ts  config.module.ts  config.schema.ts  config.service.ts
server/apps/auth/src/data/: constraint.ts  data.module.ts  entities.ts
server/apps/auth/src/data/auth-provider/: auth-provider.dao.ts  auth-provider.entity.ts  index.ts
server/apps/auth/src/data/user/: index.ts  user.dao.ts  user.entity.ts
server/apps/auth/src/dto/: auth-provider-base.dto.ts  toDto.ts  user-base.dto.ts  user-with-providers.dto.ts
server/apps/auth/src/modules/authentication/: authentication.controller.ts  authentication.module.ts  authentication.service.ts
server/apps/auth/src/modules/crypto/: crypto.service.ts
server/apps/backend/: BUILD.bazel  Dockerfile  nodemon.json  package.json  pnpm-lock.yaml  to-do.md  tsconfig.build.json  tsconfig.build.tsbuildinfo  tsconfig.json
server/apps/backend/src/: createPostgresConnectionString.ts  main.ts
server/apps/backend/src/cli/: generate-schema.ts  graphql-schema.module.ts
server/apps/backend/src/modules/: app.module.ts  modules.ts
server/apps/gateway/: BUILD.bazel  nodemon.json  package.json  tsconfig.json
server/apps/gateway/src/: app.module.ts  main.ts
server/apps/gateway/src/cli/: generate-schema.ts
server/apps/image-gen/: .gitignore  BUILD.bazel  nodemon.json
server/apps/image-gen/src/: config.py  main.py
server/apps/image-gen/src/app_lib/: __init__.py
server/apps/prompt/: BUILD.bazel  nodemon.json  pyvenv.cfg  requirements.txt
server/apps/prompt/src/: config.py  main.py
server/apps/prompt/src/app_lib/: __init__.py
server/backend/: BUILD.bazel  MODULE.bazel  package.json  tsconfig.json
server/backend/src/: main.ts
tools/aws/: BUILD.bazel  aws.sh  aws_configure.sh  defs.bzl  eksctl.sh  export_aws_config_vars.sh  ssh.sh
tools/doctl/: BUILD.bazel  defs.bzl  doctl.sh
tools/gcloud/: BUILD.bazel  gcloud.sh  service-account.json
tools/k8s/: BUILD.bazel  kubectl.sh
tools/pnpm/: BUILD.bazel  pnpm.sh
tools/shell/: BUILD.bazel  package_version.sh  prod_deps.sh  versions_json.sh
(+101 files in other folders)
