load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_layer")

# link all dependencies from root package.json
npm_link_all_packages(name = "node_modules")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
    deps = ["//:node_modules/@tsconfig/node16-strictest"],
)

exports_files([
    "package.json",
    "pnpm-lock.yaml",
    "pnpm-workspace.yaml",
])
