load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_layer")

# link all dependencies from root package.json
npm_link_all_packages(name = "node_modules")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
    deps = ["//:node_modules/@tsconfig/node16-strictest"],
)

exports_files([
    "package.json",
    "pnpm-lock.yaml",
    "pnpm-workspace.yaml",
])

toolchain(
    name = "kubectl_linux_toolchain",
    target_compatible_with = [
        "@platforms//os:linux",
        # If necessary, specify CPU architecture as well.
        # "@platforms//cpu:x86_64",
    ],
    toolchain = ":kubectl_toolchain_impl",
    toolchain_type = "@io_bazel_rules_k8s//toolchains/kubectl:kubectl_linux_arm64_toolchain",
)

alias(
    name = 'dc',
    actual = "//sandbox/environment:dc"
)
