load("//tools/bazel:variables.bzl", "import_env_vars")

import_env_vars(
    name = "workspace_env_vars",
    vars_mapping = {
        "APP_ENV": "APP_ENV",
        "PY_VENV": "PY_VENV",
    },
    visibility = ["//visibility:public"],
)

import_env_vars(
    name = "gcp_env_vars",
    vars_mapping = {
        "GCP_PROJECT_ID": "GCP_PROJECT_ID",
        "GCP_REGION": "GCP_REGION",
        "GCP_PROJECT_NAME": "GCP_PROJECT_NAME",
        "GCP_CLOUDSDK_CONFIG": "GCP_CLOUDSDK_CONFIG",
        "GCP_NPM_ARTIFACTS_SCOPE": "GCP_NPM_ARTIFACTS_SCOPE",
        "GCP_NPM_ARTIFACTS_REPOSITORY": "GCP_NPM_ARTIFACTS_REPOSITORY",
        "GCP_NPM_ARTIFACTS_LOCATION": "GCP_NPM_ARTIFACTS_LOCATION",
        "GCP_DOCKER_ARTIFACTS_REPOSITORY": "GCP_DOCKER_ARTIFACTS_REPOSITORY",
        "GCP_DOCKER_ARTIFACTS_LOCATION": "GCP_DOCKER_ARTIFACTS_LOCATION",
        "GCP_DOCKER_BACKEND_IMAGE": "GCP_DOCKER_BACKEND_IMAGE",
        "GCP_DOCKER_AUTH_IMAGE": "GCP_DOCKER_AUTH_IMAGE",
        "GCP_DOCKER_WEB_CLIENT_IMAGE": "GCP_DOCKER_WEB_CLIENT_IMAGE",
        "GKE_CLUSTER_NAME_SHORT": "GKE_CLUSTER_NAME_SHORT",
        "GKE_CLUSTER_NAME": "GKE_CLUSTER_NAME",
        "GKE_CLUSTER_LOCATION": "GKE_CLUSTER_LOCATION",
        "GKE_CLUSTER_LOCATION_ROOT": "GKE_CLUSTER_LOCATION_ROOT",
        "GCP_CLOUD_SQL_SA_SECRET": "GCP_CLOUD_SQL_SA_SECRET",
        "GCP_CLOUD_SQL_SA": "GCP_CLOUD_SQL_SA",
        "GCP_CLOUD_SQL_NAME": "GCP_CLOUD_SQL_NAME",
        "GCP_CLOUD_SQL_INSTANCE": "GCP_CLOUD_SQL_INSTANCE",
        "GCP_TERRAFORM_BUCKET": "GCP_TERRAFORM_BUCKET",
        "GCP_TERRAFORM_SA": "GCP_TERRAFORM_SA",
        "GCP_TERRAFORM_SA_SECRET": "GCP_TERRAFORM_SA_SECRET",
        "GCP_CLOUD_BUILD_SA": "GCP_CLOUD_BUILD_SA",
        "GCP_CLOUD_BUILD_SA_SECRET": "GCP_CLOUD_BUILD_SA_SECRET",
        "GCP_DEVELOPMENT_SA": "GCP_DEVELOPMENT_SA",
        "GCP_DEVELOPMENT_SA_SECRET": "GCP_DEVELOPMENT_SA_SECRET",
    },
    visibility = ["//visibility:public"],
)

import_env_vars(
    name = "postgres_env_vars",
    vars_mapping = {
        "POSTGRES_HOST": "POSTGRES_HOST",
        "POSTGRES_PORT": "POSTGRES_PORT",
        "POSTGRES_USERNAME": "POSTGRES_USERNAME",
        "POSTGRES_PASSWORD": "POSTGRES_PASSWORD",
        "POSTGRES_DATABASE": "POSTGRES_DATABASE",
        "POSTGRES_URL": "POSTGRES_URL",
    },
    visibility = ["//visibility:public"],
)

import_env_vars(
    name = "redis_env_vars",
    vars_mapping = {
        "REDIS_HOST": "REDIS_HOST",
        "REDIS_PORT": "REDIS_PORT",
    },
    visibility = ["//visibility:public"],
)

import_env_vars(
    name = "local_dc_env_vars",
    vars_mapping = {
        "POSTGRES_HOST": "POSTGRES_HOST",
        "POSTGRES_PORT": "POSTGRES_PORT",
        "POSTGRES_USERNAME": "POSTGRES_USERNAME",
        "POSTGRES_PASSWORD": "POSTGRES_PASSWORD",
        "POSTGRES_DATABASE": "POSTGRES_DATABASE",
        "REDIS_HOST": "REDIS_HOST",
        "REDIS_PORT": "REDIS_PORT",
    },
    visibility = ["//visibility:public"],
)

import_env_vars(
    name = "data_source_env_vars",
    vars_mapping = {
        "DATA_SOURCE_POSTGRES_URL": "DATA_SOURCE_POSTGRES_URL",
    },
    visibility = ["//visibility:public"],
)

import_env_vars(
    name = "backend_env_vars",
    vars_mapping = {
        "BACKEND_POSTGRES_HOST": "BACKEND_POSTGRES_HOST",
        "BACKEND_POSTGRES_PORT": "BACKEND_POSTGRES_PORT",
        "BACKEND_WEB_EXPOSE_HOST": "BACKEND_WEB_EXPOSE_HOST",
        "BACKEND_WEB_EXPOSE_PORT": "BACKEND_WEB_EXPOSE_PORT",
        "BACKEND_AUTH_API_HOST": "BACKEND_AUTH_API_HOST",
        "BACKEND_AUTH_API_PORT": "BACKEND_AUTH_API_PORT",
        "BACKEND_POSTGRES_USERNAME": "BACKEND_POSTGRES_USERNAME",
        "BACKEND_POSTGRES_PASSWORD": "BACKEND_POSTGRES_PASSWORD",
        "BACKEND_POSTGRES_DATABASE": "BACKEND_POSTGRES_DATABASE",
        "BACKEND_AUTH_VERIFY_WEBHOOK_URL": "BACKEND_AUTH_VERIFY_WEBHOOK_URL",
        "BACKEND_AUTH_API_URL": "BACKEND_AUTH_API_URL",
    },
    visibility = ["//visibility:public"],
)

import_env_vars(
    name = "auth_env_vars",
    vars_mapping = {
        "AUTH_WEB_EXPOSE_HOST": "AUTH_WEB_EXPOSE_HOST",
        "AUTH_WEB_EXPOSE_PORT": "AUTH_WEB_EXPOSE_PORT",
        "AUTH_POSTGRES_HOST": "AUTH_POSTGRES_HOST",
        "AUTH_POSTGRES_PORT": "AUTH_POSTGRES_PORT",
        "AUTH_POSTGRES_USERNAME": "AUTH_POSTGRES_USERNAME",
        "AUTH_POSTGRES_PASSWORD": "AUTH_POSTGRES_PASSWORD",
        "AUTH_POSTGRES_DATABASE": "AUTH_POSTGRES_DATABASE",
        "AUTH_POSTGRES_SCHEMA": "AUTH_POSTGRES_SCHEMA",
        "AUTH_JWT_SECRET": "AUTH_JWT_SECRET",
        "AUTH_JWT_LIFE_SECONDS": "AUTH_JWT_LIFE_SECONDS",
    },
    visibility = ["//visibility:public"],
)

import_env_vars(
    name = "image_gen_env_vars",
    vars_mapping = {
        "IMAGE_GEN_OPENAI_API_KEY": "IMAGE_GEN_OPENAI_API_KEY",
    },
    visibility = ["//visibility:public"],
)

import_env_vars(
    name = "prompt_env_vars",
    vars_mapping = {
        "PROMPT_OPENAI_API_KEY": "PROMPT_OPENAI_API_KEY",
        "PROMPT_REDIS_HOST": "PROMPT_REDIS_HOST",
        "PROMPT_REDIS_PORT": "PROMPT_REDIS_PORT",
        "PROMPT_REDIS_DB": "PROMPT_REDIS_DB",
    },
    visibility = ["//visibility:public"],
)
