load("//tools/bazel:variables.bzl", "import_env_vars")

import_env_vars(
    name = "workspace_env_vars",
    vars_mapping = {
        "APP_ENV": "APP_ENV",
        "WR_TMP_DATA": "WR_TMP_DATA",
        "PY_VENV": "PY_VENV",
        "KUBE_CONFIG": "KUBE_CONFIG",
        "GCP_CLOUDSDK_CONFIG": "GCP_CLOUDSDK_CONFIG",
        "AWS_CONFIG_FILE": "AWS_CONFIG_FILE",
        "AWS_SHARED_CREDENTIALS_FILE": "AWS_SHARED_CREDENTIALS_FILE",
        "TF_DATA_DIR": "TF_DATA_DIR",
        "XDG_CONFIG_HOME": "XDG_CONFIG_HOME",
        "UUID": "UUID",
    },
    visibility = ["//visibility:public"],
)

import_env_vars(
    name = "gcp_env_vars",
    vars_mapping = {
        "GCP_PROJECT_ID": "GCP_PROJECT_ID",
        "GCP_REGION": "GCP_REGION",
        "GCP_PROJECT_NAME": "GCP_PROJECT_NAME",
        "GCP_NPM_ARTIFACTS_SCOPE": "GCP_NPM_ARTIFACTS_SCOPE",
        "GCP_NPM_ARTIFACTS_REPOSITORY": "GCP_NPM_ARTIFACTS_REPOSITORY",
        "GCP_NPM_ARTIFACTS_LOCATION": "GCP_NPM_ARTIFACTS_LOCATION",
        "GCP_DOCKER_ARTIFACTS_REPOSITORY": "GCP_DOCKER_ARTIFACTS_REPOSITORY",
        "GCP_DOCKER_ARTIFACTS_LOCATION": "GCP_DOCKER_ARTIFACTS_LOCATION",
        "GCP_DOCKER_BACKEND_IMAGE": "GCP_DOCKER_BACKEND_IMAGE",
        "GCP_DOCKER_AUTH_IMAGE": "GCP_DOCKER_AUTH_IMAGE",
        "GCP_DOCKER_WEB_CLIENT_IMAGE": "GCP_DOCKER_WEB_CLIENT_IMAGE",
        "GCP_DOCKER_DATA_SOURCE_IMAGE": "GCP_DOCKER_DATA_SOURCE_IMAGE",
        "GCP_TERRAFORM_BUCKET": "GCP_TERRAFORM_BUCKET",
        "GCP_TERRAFORM_SA": "GCP_TERRAFORM_SA",
        "GCP_TERRAFORM_SA_SECRET": "GCP_TERRAFORM_SA_SECRET",
        "GCP_CLOUD_BUILD_SA": "GCP_CLOUD_BUILD_SA",
        "GCP_CLOUD_BUILD_SA_SECRET": "GCP_CLOUD_BUILD_SA_SECRET",
        "GCP_DEVELOPMENT_SA": "GCP_DEVELOPMENT_SA",
        "GCP_DEVELOPMENT_SA_SECRET": "GCP_DEVELOPMENT_SA_SECRET",
        "GCP_CLOUD_BUILD_SDK_VERSION": "GCP_CLOUD_BUILD_SDK_VERSION",
        "GCP_GITHUB_SSH_KEY_SECRET_NAME": "GCP_GITHUB_SSH_KEY_SECRET_NAME",
        "GCP_DO_TF_ACCESS_KEY_SECRET_NAME": "GCP_DO_TF_ACCESS_KEY_SECRET_NAME",
        "GCP_AWS_RDS_POSTGRES_CONNECTION_ENDPOINT_SECRET_NAME": "GCP_AWS_RDS_POSTGRES_CONNECTION_ENDPOINT_SECRET_NAME",
        "GCP_AWS_RDS_AUTH_SERVICE_POSTGRES_CONNECTION_ENDPOINT_SECRET_NAME": "GCP_AWS_RDS_AUTH_SERVICE_POSTGRES_CONNECTION_ENDPOINT_SECRET_NAME",
        "GCP_ARTIFACTS_READER_SA_SECRET": "GCP_ARTIFACTS_READER_SA_SECRET",
        "GCP_ARTIFACTS_READER_SA": "GCP_ARTIFACTS_READER_SA",
        "GCP_BAZEL_REMOTE_CACHE_BUCKET": "GCP_BAZEL_REMOTE_CACHE_BUCKET",
        "GCP_AWS_REDIS_ENDPOINT_SECRET_NAME": "GCP_AWS_REDIS_ENDPOINT_SECRET_NAME",
        "GCP_AWS_REDIS_PASSWORD_SECRET_NAME": "GCP_AWS_REDIS_PASSWORD_SECRET_NAME",
        "GCP_DOCKER_PROMPT_IMAGE": "GCP_DOCKER_PROMPT_IMAGE",
        "GCP_OPENAI_KEY_SECRET_NAME": "GCP_OPENAI_KEY_SECRET_NAME",
    },
    visibility = ["//visibility:public"],
)

import_env_vars(
    name = "cluster_env_vars",
    vars_mapping = {
        "CLUSTER_NAME": "CLUSTER_NAME",
    },
    visibility = ["//visibility:public"],
)

import_env_vars(
    name = "do_env_vars",
    vars_mapping = {
        "DO_TF_ACCESS_KEY": "DO_TF_ACCESS_KEY",
    },
    visibility = ["//visibility:public"],
)

import_env_vars(
    name = "aws_env_vars",
    vars_mapping = {
        "AWS_DEFAULT_REGION": "AWS_DEFAULT_REGION",
        "AWS_DEFAULT_ACCESS_KEY_SECRET": "AWS_DEFAULT_ACCESS_KEY_SECRET",
        "AWS_DEFAULT_ACCESS_KEY_ID": "AWS_DEFAULT_ACCESS_KEY_ID",
        "AWS_RDS_POSTGRES_NAME": "AWS_RDS_POSTGRES_NAME",
        "AWS_RDS_POSTGRES_USERNAME": "AWS_RDS_POSTGRES_USERNAME",
        "AWS_RDS_POSTGRES_PASSWORD": "AWS_RDS_POSTGRES_PASSWORD",
        "AWS_RDS_POSTGRES_PORT": "AWS_RDS_POSTGRES_PORT",
        "AWS_RDS_POSTGRES_DB_NAME": "AWS_RDS_POSTGRES_DB_NAME",
        "AWS_IAM_USER_CLOUD_BUILDER": "AWS_IAM_USER_CLOUD_BUILDER",
        "AWS_REDIS_PORT": "AWS_REDIS_PORT",
        "AWS_REDIS_PASSWORD": "AWS_REDIS_PASSWORD",
    },
    visibility = ["//visibility:public"],
)

import_env_vars(
    name = "postgres_env_vars",
    vars_mapping = {
        "POSTGRES_HOST": "POSTGRES_HOST",
        "POSTGRES_PORT": "POSTGRES_PORT",
        "POSTGRES_USERNAME": "POSTGRES_USERNAME",
        "POSTGRES_PASSWORD": "POSTGRES_PASSWORD",
        "POSTGRES_DATABASE": "POSTGRES_DATABASE",
        "POSTGRES_URL": "POSTGRES_URL",
    },
    visibility = ["//visibility:public"],
)

import_env_vars(
    name = "redis_env_vars",
    vars_mapping = {
        "REDIS_HOST": "REDIS_HOST",
        "REDIS_PORT": "REDIS_PORT",
    },
    visibility = ["//visibility:public"],
)

import_env_vars(
    name = "local_dc_env_vars",
    vars_mapping = {
        "POSTGRES_HOST": "POSTGRES_HOST",
        "POSTGRES_PORT": "POSTGRES_PORT",
        "POSTGRES_USERNAME": "POSTGRES_USERNAME",
        "POSTGRES_PASSWORD": "POSTGRES_PASSWORD",
        "POSTGRES_DATABASE": "POSTGRES_DATABASE",
        "REDIS_HOST": "REDIS_HOST",
        "REDIS_PORT": "REDIS_PORT",
    },
    visibility = ["//visibility:public"],
)

import_env_vars(
    name = "data_source_env_vars",
    vars_mapping = {
        "DATA_SOURCE_POSTGRES_URL": "DATA_SOURCE_POSTGRES_URL",
    },
    visibility = ["//visibility:public"],
)

import_env_vars(
    name = "backend_env_vars",
    vars_mapping = {
        "BACKEND_POSTGRES_HOST": "BACKEND_POSTGRES_HOST",
        "BACKEND_POSTGRES_PORT": "BACKEND_POSTGRES_PORT",
        "BACKEND_WEB_EXPOSE_HOST": "BACKEND_WEB_EXPOSE_HOST",
        "BACKEND_WEB_EXPOSE_PORT": "BACKEND_WEB_EXPOSE_PORT",
        "BACKEND_AUTH_API_HOST": "BACKEND_AUTH_API_HOST",
        "BACKEND_AUTH_API_PORT": "BACKEND_AUTH_API_PORT",
        "BACKEND_POSTGRES_USERNAME": "BACKEND_POSTGRES_USERNAME",
        "BACKEND_POSTGRES_PASSWORD": "BACKEND_POSTGRES_PASSWORD",
        "BACKEND_POSTGRES_DATABASE": "BACKEND_POSTGRES_DATABASE",
        "BACKEND_AUTH_VERIFY_WEBHOOK_URL": "BACKEND_AUTH_VERIFY_WEBHOOK_URL",
        "BACKEND_AUTH_API_URL": "BACKEND_AUTH_API_URL",
    },
    visibility = ["//visibility:public"],
)

import_env_vars(
    name = "auth_env_vars",
    vars_mapping = {
        "AUTH_WEB_EXPOSE_HOST": "AUTH_WEB_EXPOSE_HOST",
        "AUTH_WEB_EXPOSE_PORT": "AUTH_WEB_EXPOSE_PORT",
        "AUTH_POSTGRES_HOST": "AUTH_POSTGRES_HOST",
        "AUTH_POSTGRES_PORT": "AUTH_POSTGRES_PORT",
        "AUTH_POSTGRES_USERNAME": "AUTH_POSTGRES_USERNAME",
        "AUTH_POSTGRES_PASSWORD": "AUTH_POSTGRES_PASSWORD",
        "AUTH_POSTGRES_DATABASE": "AUTH_POSTGRES_DATABASE",
        "AUTH_POSTGRES_SCHEMA": "AUTH_POSTGRES_SCHEMA",
        "AUTH_JWT_SECRET": "AUTH_JWT_SECRET",
        "AUTH_JWT_LIFE_SECONDS": "AUTH_JWT_LIFE_SECONDS",
        "AUTH_AUTHZ_DOMAIN": "AUTH_AUTHZ_DOMAIN",
        "AUTH_AUTHZ_CLIENT_ID": "AUTH_AUTHZ_CLIENT_ID",
        "AUTH_AUTHZ_CLIENT_SECRET": "AUTH_AUTHZ_CLIENT_SECRET",
    },
    visibility = ["//visibility:public"],
)

import_env_vars(
    name = "image_gen_env_vars",
    vars_mapping = {
        "IMAGE_GEN_OPENAI_API_KEY": "IMAGE_GEN_OPENAI_API_KEY",
    },
    visibility = ["//visibility:public"],
)

import_env_vars(
    name = "prompt_env_vars",
    vars_mapping = {
        "PROMPT_OPENAI_API_KEY": "PROMPT_OPENAI_API_KEY",
        "PROMPT_REDIS_HOST": "PROMPT_REDIS_HOST",
        "PROMPT_REDIS_PORT": "PROMPT_REDIS_PORT",
        "PROMPT_REDIS_DB": "PROMPT_REDIS_DB",
    },
    visibility = ["//visibility:public"],
)

import_env_vars(
    name = "web_client_env_vars",
    vars_mapping = {
        "WEB_CLIENT_AUTHZ_DOMAIN": "WEB_CLIENT_AUTHZ_DOMAIN",
        "WEB_CLIENT_AUTHZ_CLIENT_ID": "WEB_CLIENT_AUTHZ_CLIENT_ID",
    },
    visibility = ["//visibility:public"],
)
