load("//tools/terraform:defs.bzl", "tf")

genrule(
    name = "test",
    srcs = ["gcp/01_gcp_service_accounts.tf"],
    outs = ["aa.txt"],
    cmd = """
    ls 
    pwd
    echo "$(location gcp/01_gcp_service_accounts.tf)"
    echo "123" > $@
    """,
)

tf(
    name = "tf",
    data = glob([
        "**/*.tf",
        "**/*.tfvars",
        "**/.*.lock.hcl",
        "**/*.tfstate",
        "**/*.tfplan",
    ]) + [
        "//sandbox/cluster:kubeconfig",
        "//sandbox/gcp/terraform:sa",
    ],
    env = {
        "WORKDIR": "deploy/infra",
        "AWS_CONFIG_FILE": "$(AWS_CONFIG_FILE)",
        "AWS_SHARED_CREDENTIALS_FILE": "$(AWS_SHARED_CREDENTIALS_FILE)",
        "AWS_DEFAULT_REGION": "$(AWS_DEFAULT_REGION)",
        "KUBECONFIG": "$(location //sandbox/cluster:kubeconfig)",
        "KUBECONFIGPATH": "$(location //sandbox/cluster:kubeconfig)",
        "CLOUDSDK_CONFIG": "$(GCP_CLOUDSDK_CONFIG)",
        "GOOGLE_APPLICATION_CREDENTIALS": "$(rootpath %s)" % "//sandbox/gcp/terraform:sa",
        "TF_DATA_DIR": "$(TF_DATA_DIR)",
        "XDG_CONFIG_HOME": "$(XDG_CONFIG_HOME)",
    },
    toolchains = [
        "//sandbox:gcp_env_vars",
        "//sandbox:workspace_env_vars",
        "//sandbox:aws_env_vars",
        "//sandbox:do_env_vars",
        "//sandbox:cluster_env_vars",
    ],
    vars = {
        "sandbox_env": "$(APP_ENV)",
        "k8s_backend_name": "backend",
        "k8s_backend_container_port": "3000",
        "gcp_project_id": "$(GCP_PROJECT_ID)",
        "gcp_terraform_bucket": "$(GCP_TERRAFORM_BUCKET)",
        "gcp_region": "$(GCP_REGION)",
        "gcp_cloud_build_sa": "$(GCP_CLOUD_BUILD_SA)",
        "gcp_cloud_build_sa_secret": "$(GCP_CLOUD_BUILD_SA_SECRET)",
        "gcp_development_sa": "$(GCP_DEVELOPMENT_SA)",
        "gcp_development_sa_secret": "$(GCP_DEVELOPMENT_SA_SECRET)",
        "gcp_docker_artifacts_repository": "$(GCP_DOCKER_ARTIFACTS_REPOSITORY)",
        "gcp_github_ssh_key_secret_name": "$(GCP_GITHUB_SSH_KEY_SECRET_NAME)",
        "gcp_do_tf_access_key_secret_name": "$(GCP_DO_TF_ACCESS_KEY_SECRET_NAME)",
        "gcp_aws_rds_postgres_connection_endpoint_secret_name": "$(GCP_AWS_RDS_POSTGRES_CONNECTION_ENDPOINT_SECRET_NAME)",
        "gcp_npm_artifacts_repository": "$(GCP_NPM_ARTIFACTS_REPOSITORY)",
        "gcp_artifacts_reader_sa_secret": "$(GCP_ARTIFACTS_READER_SA_SECRET)",
        "gcp_artifacts_reader_sa": "$(GCP_ARTIFACTS_READER_SA)",
        "gcp_bazel_remote_cache_bucket": "$(GCP_BAZEL_REMOTE_CACHE_BUCKET)",
        "aws_region": "$(AWS_DEFAULT_REGION)",
        "aws_rds_postgres_name": "$(AWS_RDS_POSTGRES_NAME)",
        "aws_rds_postgres_username": "$(AWS_RDS_POSTGRES_USERNAME)",
        "aws_rds_postgres_password": "$(AWS_RDS_POSTGRES_PASSWORD)",
        "aws_rds_postgres_port": "$(AWS_RDS_POSTGRES_PORT)",
        "aws_rds_postgres_db_name": "$(AWS_RDS_POSTGRES_DB_NAME)",
        "aws_iam_user_cloud_builder": "$(AWS_IAM_USER_CLOUD_BUILDER)",
        "do_tf_access_key": "$(DO_TF_ACCESS_KEY)",
        "cluster_name": "$(CLUSTER_NAME)",
    },
)

sh_binary(
    name = "setup",
    srcs = ["setup.sh"],
    args = [
        "-sa",
        "$(GCP_TERRAFORM_SA)",
        "-bucket",
        "$(GCP_TERRAFORM_BUCKET)",
        "-secret",
        "$(GCP_TERRAFORM_SA_SECRET)",
    ],
    env = {
        "PROJECT_ID": "$(GCP_PROJECT_ID)",
        "CLOUDSDK_CONFIG": "$(GCP_CLOUDSDK_CONFIG)",
    },
    toolchains = [
        "//sandbox:gcp_env_vars",
        "//sandbox:workspace_env_vars",
    ],
)
