load("//tools/doctl:defs.bzl", "doctl_binary")

genrule(
    name = "kubeconfig",
    srcs = [
        "get-kubeconfig.sh",
        "//sandbox/gcp/secrets:do_tf_access_key",
    ],
    outs = ["kubeconfig.yaml"],
    cmd = """
        export DIGITALOCEAN_CONTEXT=$(DIGITALOCEAN_CONTEXT)
        export XDG_CONFIG_HOME=$(XDG_CONFIG_HOME)
        export DIGITALOCEAN_ACCESS_TOKEN=$$(cat $(location //sandbox/gcp/secrets:do_tf_access_key))
        export CLUSTER_NAME=$(CLUSTER_NAME)
        $(location get-kubeconfig.sh) $@
    """,
    tags = [
        "no-cache",
        "no-sandbox",
        "requires-network",
    ],
    toolchains = [
        "//sandbox:workspace_env_vars",
        "//sandbox:cluster_env_vars",
        "//sandbox:do_env_vars",
    ],
    visibility = ["//visibility:public"],
)
