load("//sandbox/gcp:defs.bzl", "secret_version")

secret_version(
    name = "aws_cloud_builder_ak",
    secret = "$(GCP_AWS_IAM_USER_CLOUD_BUILDER_SA)",
)

genrule(
    name = "aws_cloud_builder_ak_id",
    srcs = [":aws_cloud_builder_ak"],
    outs = [".aws_cloud_builder_ak_id_secret_data"],
    cmd = """
    cat $(location :aws_cloud_builder_ak) | base64 --decode | jq ".access_key" | sed "s/\\"//g" > $@
    """,
    visibility = ["//visibility:public"],
)

genrule(
    name = "aws_cloud_builder_ak_secret",
    srcs = [":aws_cloud_builder_ak"],
    outs = [".aws_cloud_builder_ak_secret_secret_data"],
    cmd = """
    cat $(location :aws_cloud_builder_ak) | base64 --decode | jq ".secret_key" | sed "s/\\"//g" > $@
    """,
    visibility = ["//visibility:public"],
)

secret_version(
    name = "gcp_cloud_builder_sa",
    secret = "$(GCP_CLOUD_BUILD_SA_SECRET)",
)

sh_binary(
    name = "active_cloud_builder_sa",
    srcs = ["//tools/gcloud:gcloud_cli"],
    args = [
        "auth",
        "activate-service-account",
        "--key-file=$(location :gcp_cloud_builder_sa)",
    ],
    data = [
        ":gcp_cloud_builder_sa",
        ":gcp_cloud_builder_sa_email",
    ],
    env = {
        "CLOUDSDK_CONFIG": "$(GCP_CLOUDSDK_CONFIG)",
        "PROJECT_ID": "$(GCP_PROJECT_ID)",
    },
    toolchains = [
        "//sandbox:workspace_env_vars",
        "//sandbox:gcp_env_vars",
    ],
)
